[B]1.4.6[/B]
- Added: option to disable checking soureces

[B]1.4.5[/B]
- now all images will be taken from Thumbnails cache folder

[B]1.4.4[/B]
- Fixed: images update
- Added: sync images without saving to temp

[B]1.4.3[/B]
- Fixed: compatibility for MacOS
- Added: checking access to sources

[B]1.4.2[/B]
- Added: option for using Http Basic Auth
- Fixed: minor bugs
- Clean: move lib folder to resources

[B]1.4.1[/B]
- Fixed: image link/path utf-8 encoded

[B]1.4.0[/B]
- rewrited sync function
- Added: separate function to sync images
- Added: auto sync webserver settings for control remote

[B]1.3.4[/B]
- Added: Sync imdb id

[B]1.3.3[/B]
- Added: Sync episode thumb
- Added: new view for episodes

[B]1.3.2[/B]
- Fixed: Display info when settings not set
- Fixed: Sync episode files
- Fixed: error when adding panels value

[B]1.3.1[/B]
- Fixed: decode language string bug

[B]1.3.0[/B]
- Added: sync extra thumbs
- Added: sync multiple audio streams
- Added: sync subtitles language
- sync settings moved to site admin panel

[B]1.2.10[/B]
- Fixed: syncing poster and fanart
- Added: set quailty for poster and fanart

[B]1.2.9[/B]
- Fixed: Closing progress bar after connection error
- Fixed: Import PIL module
- Added: sync studio

[B]1.2.8[/B]
- Fix: Progress bar for older XBMC version

[B]1.2.7[/B]
- Added: Progress bar
- Fix: Syncing sets

[B]1.2.6[/B]
- Fixed: stops syncing when error occur
- Added: Spanish, Danish language

[B]1.2.5[/B]
- Fix: sync Last Added, Last Played, Watched
- Added: bdmv files to exceptions at sync
- Added: Syncing path to file

[B]1.2.4[/B]
- Fix: sync bug

[B]1.2.3[/B]
- Fix: Generate banner after sync end

[B]1.2.2[/B]
- Added: Generate banner after sync end

[B]1.2.1[/B]
- Fixed: Sync watched

[B]1.2.0[/B]
- Added: Support for TVshows
- Fixed: sync images

[B]1.1.9[/B]
- Added: Support for hosting with allow_url_fopen disabled
- Fixed: Syncing when using Master Lock