@@ -1,3 +1,6 @@
+[B]1.4.7[/B]
+- Fixed: syncing arts from local source
+
 [B]1.4.6[/B]
 - Added: option to disable checking soureces
 
